--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ src/Migrations/Version20180119144739.php
 src/Migrations/Version20180124162702.php
 
 src/Migrations/Version20180120150010.php
+src/Entity/User.php
