--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ public/img/uploads/photoevenement55691.jpeg
 templates/admin/sport.html.twig
 templates/admin/sport.html.twig
 templates/admin/sport.html.twig
+composer.lock
