--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -1,7 +1,7 @@
 easy_admin:
    entities:
         Evenement:
-            class: App\Form\EvenementType
+            class: App\Entity\Evenement
             form:
                 fields:
-                    - { property: 'localisation', type: 'easyadmin_autocomplete', type_options: { class: 'App\Entity\Localisation' } }
+                    - { property: 'localisation', type: 'easyadmin_autocomplete', type_options: { class: 'App\Entity\Categorie' } }
