--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,7 @@ templates/admin/sport.html.twig
 templates/admin/sport.html.twig
 templates/admin/sport.html.twig
 composer.lock
+public/img/uploads/evenement/photoevenement73022.jpeg
+src/Migrations/Version20180203114214.php
+src/Migrations/Version20180203114214.php
+src/Migrations/Version20180203114214.php
